--- a/Works/works.html
+++ b/Works/works.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datchlive</title>
   <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
     <div class="ytworks-btn">
       <a href="../Contact/contact.html" class="btn">問い合わせ</a>
       <div class="btn-YT">
-        <a href="https://www.youtube.com/user/datchlivetv" class="btn">YouTube</a>
+        <a href="https://www.youtube.com/user/datchlivetv" class="btn-red">YouTube</a>
       </div>
     </div>
   </section>
@@ -79,7 +79,7 @@
   <section class="bottom-vpworks wrapper">
     <h3>VideoProduction</h3>
     <div class="container">
-      <div>
+      <div id="modal">
         <img src="../Image/Video-1.jpg" alt="Videoサムネイル1">
       </div>
       <div>
@@ -109,6 +109,7 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
+
 </body>
 
 </html>
