--- a/Works/works.html
+++ b/Works/works.html
@@ -46,23 +46,159 @@
 
   <section class="bottom-ytworks wrapper">
     <h3>YouTubePR</h3>
+
+
+
+
+
     <div class="container">
-      <div class="works-image">
-        <img src="../Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-1">
+          <img src="../Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
+        </div>
+
+        <div class="modal" id="modal-1" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/4QCDKWwoZi0" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">「ZENLET The Rack」</p>
+              <p class="modal-company">Zenlet 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="works-image">
-        <img src="../Image/YouTube-2.jpg" alt="YouTubePRサムネイル2">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-2">
+          <img src="../Image/YouTube-2.jpg" alt="YouTubePRサムネイル2">
+        </div>
+        <div class="modal" id="modal-2" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/TdGWnBjY0sI" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">「STRENTER Type-C HUB」</p>
+              <p class="modal-company">STRENTER 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="works-image">
-        <img src="../Image/YouTube-3.jpg" alt="YouTubePRサムネイル3">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-3">
+          <img src="../Image/YouTube-3.jpg" alt="YouTubePRサムネイル3">
+        </div>
+        <div class="modal" id="modal-3" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/iR-zkGPbVH0" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">「MOFT Carry Sleeve」</p>
+              <p class="modal-company">MOFT 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="works-image">
-        <img src="../Image/YouTube-4.jpg" alt="YouTubePRサムネイル4">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-4">
+          <img src="../Image/YouTube-4.jpg" alt="YouTubePRサムネイル4">
+        </div>
+        <div class="modal" id="modal-4" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Qc_BR_UnHCM" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">「BenQ ScreenBar Plus」</p>
+              <p class="modal-company">BenQ 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="works-image">
-        <img src="../Image/YouTube-5.jpg" alt="YouTubePRサムネイル5">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-5">
+          <img src="../Image/YouTube-5.jpg" alt="YouTubePRサムネイル5">
+        </div>
+        <div class="modal" id="modal-5" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/8MXtpjEEd3w" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">「SwitchBot Hub Mini」</p>
+              <p class="modal-company">SwitchBot 様</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <div class="works-para">
       <p>
         ご依頼はお問い合わせフォームよりどうぞ。通常3日以内には返信致します。現在レビューに関しましては、有料のプロモーション依頼のみ承っております。(1万円〜 ※要相談。無料・製品提供のPRはお受けしておりません。)
@@ -78,16 +214,95 @@
 
   <section class="bottom-vpworks wrapper">
     <h3>VideoProduction</h3>
+
     <div class="container">
-      <div id="modal">
-        <img src="../Image/Video-1.jpg" alt="Videoサムネイル1">
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-11">
+          <img src="../Image/Video-1.jpg" alt="Videoサムネイル1">
+        </div>
+        <div class="modal" id="modal-11" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/6Btsz2h-Mzk" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">【森田銀河×藤井創太】社交ダンス界のカリスマダンサーコラボ【チャチャチャ】</p>
+              <p class="modal-company">森田銀河 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        <img src="../Image/Video-2.jpg" alt="Videoサムネイル2">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-12">
+          <img src="../Image/Video-2.jpg" alt="Videoサムネイル2">
+        </div>
+        <div class="modal" id="modal-12" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/CDLNO_6s3ZE" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">【社交ダンス】トッププロの本気SAMBA！森田銀河&小和田愛子</p>
+              <p class="modal-company">森田銀河 様</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        <img src="../Image/Video-3.jpg" alt="Videoサムネイル3">
+
+      <div class="modal-outercontainer">
+        <div class="works-image" data-micromodal-trigger="modal-13">
+          <img src="../Image/Video-3.jpg" alt="Videoサムネイル3">
+        </div>
+        <div class="modal" id="modal-13" aria-hidden="true">
+          <div class="modal-overlay" data-micromodal-close>
+            <div class="modal-innercontainer">
+              <div class="modal-close">
+                <button>
+                  <span class="material-icons" data-micromodal-close>
+                    clear
+                  </span>
+                </button>
+              </div>
+              <div class="modal-content">
+                <div class="modal-iframe">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Z3sOSpR4Qgg" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                  </iframe>
+                </div>
+              </div>
+              <p class="modal-title">【森田銀河×藤井創太】プロとアマどっちが強いか決めようか。【社交ダンス】</p>
+              <p class="modal-company">森田銀河 様</p>
+            </div>
+          </div>
+        </div>
       </div>
+
     </div>
     <div class="works-para">
       <p>
@@ -109,6 +324,18 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
+
+
+
+  <script src="../node_modules/micromodal/dist/micromodal.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      MicroModal.init({
+        disableScroll: true,
+        awaitCloseAnimation: true
+      });
+    });
+  </script>
 
 </body>
 
