--- a/Works/works.html
+++ b/Works/works.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="bottom-header">
-    <nav class="nav">
+    <nav class="nav" id="navigation">
       <ul class="nav-list">
         <div class="nav-btn">
           <li class="nav-icon"><a href="../index.html"><span class="material-icons">home</span></a></li>
