--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="bottom-header">
-    <nav class="nav">
+    <nav class="nav" id="navigation">
       <ul class="nav-list">
         <div class="nav-btn">
           <li class="nav-icon"><a href="../index.html"><span class="material-icons">home</span></a></li>
@@ -41,6 +41,13 @@
       </ul>
     </nav>
     <h1 class="sitelogo-bottom">Datchlive</h1>
+    <div class="darkmode">
+      <span class="darkmode-text uppercase">Dark mode</span>
+      <div class="toggle-switch" id="darkBtn">
+        <input id="toggle" class="toggle-input" type='checkbox' />
+        <label for="toggle" class="toggle-label"></label>
+      </div>
+    </div>
   </header>
 
   <h2 class="title-bottom wrapper">Contact</h2>
@@ -92,7 +99,7 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
-
+  <script src="../src/dark.js"></script>
 </body>
 
 </html>
