--- a/Works/works.html
+++ b/Works/works.html
@@ -41,6 +41,14 @@
       </ul>
     </nav>
     <h1 class="sitelogo-bottom">Datchlive</h1>
+
+    <div class="darkmode">
+      <span class="darkmode-text uppercase">Dark mode</span>
+      <div class="toggle-switch" id="darkBtn">
+        <input id="toggle" class="toggle-input" type='checkbox' />
+        <label for="toggle" class="toggle-label"></label>
+      </div>
+    </div>
   </header>
   <h2 class="title-bottom wrapper">Works</h2>
 
@@ -206,7 +214,7 @@
     </div>
     <div class="ytworks-btn">
       <a href="../Contact/contact.html" class="btn">問い合わせ</a>
-      <div class="btn-YT">
+      <div class="btn-yt">
         <a href="https://www.youtube.com/user/datchlivetv" class="btn-red">YouTube</a>
       </div>
     </div>
@@ -336,6 +344,8 @@
       });
     });
   </script>
+
+  <script src="../src/dark.js"></script>
 
 </body>
 
