--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
         </div>
       </ul>
     </div>
-    <div class="toggle-switch" id="darkBtn">
-      <input id="toggle" class="toggle-input" type='checkbox' />
-      <label for="toggle" class="toggle-label"></label>
+
+    <div class="darkmode">
+      <span class="darkmode-text uppercase">Dark mode</span>
+      <div class="toggle-switch" id="darkBtn">
+        <input id="toggle" class="toggle-input" type='checkbox' />
+        <label for="toggle" class="toggle-label"></label>
+      </div>
     </div>
+
+
   </header>
 
   <main>
@@ -169,27 +175,9 @@
     });
   </script>
 
-  <script>
-    const btn = document.querySelector("#toggle");
-    // チェックした時の挙動
-    btn.addEventListener("change", () => {
-      if (btn.checked == true) {
-        // ダークモード
-        document.body.classList.remove("light-theme");
-        document.body.classList.add("dark-theme");
-        document.getElementById('navigation').style.backgroundColor = '#000000'
-        document.getElementById('navigation').style.borderColor = '#ffffff'
+  <!-- <script src="./dist/main.js"></script> -->
 
-      } else {
-        // ライトモード
-        document.body.classList.remove("dark-theme");
-        document.body.classList.add("light-theme");
-      }
-    });
-
-
-  </script>
-
+  <script src="./src/dark.js"></script>
 </body>
 
 </html>
