--- a/Contact/thanks.html
+++ b/Contact/thanks.html
@@ -23,8 +23,8 @@
           <li class="nav-text"><a href="../index.html">Home</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
-          <li class="nav-text"><a href="./About/about.html">About</a></li>
+          <li class="nav-icon"><a href="../About/about.html"><span class="material-icons">person</span></a></li>
+          <li class="nav-text"><a href="../About/about.html">About</a></li>
         </div>
         <div class="nav-btn">
           <li class="nav-icon"><a href="../Works/works.html"><span class="material-icons">work</span></a></li>
@@ -40,8 +40,8 @@
         </div>
       </ul>
     </nav>
-
     <h1 class="sitelogo-bottom">Datchlive</h1>
+
     <div class="darkmode">
       <span class="darkmode-text uppercase">Dark mode</span>
       <div class="toggle-switch" id="darkBtn">
@@ -50,54 +50,14 @@
       </div>
     </div>
   </header>
-  <h2 class="title-bottom wrapper">About</h2>
-  <section class="about wrapper">
-    <h3>Profile</h3>
-    <div class="about-image">
-      <img src="../Image/Datch-icon2.jpg" alt="プロフィールアイコン">
-    </div>
-    <div class="about-info" id="aboutInfo">
-      <div class="about-name">だっち/KouheiHonda</div>
-      <div class="about-para">
-        <p>
-          1992年生まれ28歳。新卒で自動車メーカーに入社し、サスペンション機構設計を担当。学生時代にYouTubeチャンネル「DatchLiveTv」を開設し、現在チャンネル登録者5000人↑、総再生回数120万回↑まで成長。2020年より映像制作も始め、Webデザイン・プログラミング学習を始める。
-        </p>
-      </div>
-    </div>
-  </section>
 
-  <section class="career wrapper">
-    <h3>Career</h3>
-    <dl>
-      <div class="career-ivent">
-        <dt class="career-year">1992年</dt>
-        <dd>長崎県で生まれ、高校生まで過ごす。</dd>
-      </div>
-      <div class="career-ivent">
-        <dt class="career-year">2012年</dt>
-        <dd>九州工業大学機械知能工学部入学。北九州へ引っ越す。舞踏研究部に所属し、社交ダンスを始める。</dd>
-      </div>
-      <div class="career-ivent">
-        <dt class="career-year">2013年</dt>
-        <dd>YouTubeチャンネル「だっち/DatchLiveTv」を開設。</dd>
-      </div>
-      <div class="career-ivent">
-        <dt class="career-year">2016年</dt>
-        <dd>自動車メーカーに就職。神奈川県湘南へ引っ越す。</dd>
-      </div>
-      <div class="career-ivent">
-        <dt class="career-year">2020年</dt>
-        <dd>YouTubeチャンネル登録者5000人達成。</dd>
-      </div>
-    </dl>
-  </section>
+  <main>
+    
 
-  <section class="media wrapper">
-    <h3>Media</h3>
-    <ul>
-      <li><a href="https://www.ichi-oshi.jp/articles/guide/10116">「イチオシ」にて商品レビュー記事掲載中</a></li>
-    </ul>
-  </section>
+
+  </main>
+
+
 
   <footer>
     <ul>
@@ -109,8 +69,5 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
-
-  <script src="../dist/main.js"></script>
-</body>
 
 </html>
