--- a/Works/works.html
+++ b/Works/works.html
@@ -54,11 +54,6 @@
 
   <section class="bottom-ytworks wrapper">
     <h3>YouTubePR</h3>
-
-
-
-
-
     <div class="container">
       <div class="modal-outercontainer">
         <div class="works-image" data-micromodal-trigger="modal-1">
@@ -332,20 +327,7 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
-
-
-
-  <script src="../node_modules/micromodal/dist/micromodal.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      MicroModal.init({
-        disableScroll: true,
-        awaitCloseAnimation: true
-      });
-    });
-  </script>
-
-  <script src="../src/dark.js"></script>
+  <script src="../dist/main.js"></script>
 
 </body>
 
