--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -54,7 +54,7 @@
 
   <form
     action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeie7y4yf4d7SwzQ9pnziGQz7bmF9abc9--xnuNnKBd2CZwRA/formResponse"
-    class="form wrapper">
+    target="hidden_iframe" onsubmit="submitted=true;" class="form wrapper">
     <label for="form-name" class="form-label">お名前</label>
     <p class="form-text"><input id="form-name" type="text" name="entry.584812737" required=""></p>
 
@@ -85,7 +85,9 @@
 
     <p class="form-terms">※送信時に利用規約に同意したとみなします</p>
 
-    <p class="form-btn"><button type="submit" name="button" value="送信する" class="btn">送信</button></p>
+    <div class="form-btn">
+      </p><button type="submit" name="button" value="送信する" class="btn">送信</button>
+    </div>
 
   </form>
 
@@ -99,7 +101,14 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
-  <script src="../src/dark.js"></script>
+
+  <script type="text/javascript">
+    var submitted = false;  
+  </script>
+  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+    onload="if(submitted) {window.location='./thanks.html';}"></iframe>
+
+  <script src="../dist/main.js"></script>
 </body>
 
 </html>
