--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datchlive</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -16,7 +15,6 @@
 </head>
 
 <body>
-
   <header class="top-header">
     <nav class="nav" id="navigation">
       <ul class="nav-list">
@@ -54,7 +52,6 @@
         </div>
       </ul>
     </div>
-
     <div class="darkmode">
       <span class="darkmode-text uppercase">Dark mode</span>
       <div class="toggle-switch" id="darkBtn">
@@ -62,8 +59,6 @@
         <label for="toggle" class="toggle-label"></label>
       </div>
     </div>
-
-
   </header>
 
   <main>
@@ -151,33 +146,7 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
-
-  <!-- Swiper JS -->
-  <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper('.swiper-container', {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      loop: true,
-      autoplay: {
-        delay: 2500,
-        disableOnInteraction: false,
-      },
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
-    });
-  </script>
-
-  <!-- <script src="./dist/main.js"></script> -->
-
-  <script src="./src/dark.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
