--- a/About/about.html
+++ b/About/about.html
@@ -95,7 +95,7 @@
   <section class="media wrapper">
     <h3>Media</h3>
     <ul>
-      <li><a href="https://www.ichi-oshi.jp/articles/guide/10116">「イチオシ」にて商品レビュー記事掲載中</a></li>
+      <li class="media-site"><a href="https://www.ichi-oshi.jp/articles/guide/10116">「イチオシ」にて商品レビュー記事掲載中</a></li>
     </ul>
   </section>
 
