--- a/index.html
+++ b/index.html
@@ -89,11 +89,16 @@
       <!-- YouTubeスライダー -->
       <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル1"></div>
-          <div class="swiper-slide"><img src="./Image/YouTube-2.jpg" alt="YouTubePRサムネイル2"></div>
-          <div class="swiper-slide"><img src="./Image/YouTube-3.jpg" alt="YouTubePRサムネイル3"></div>
-          <div class="swiper-slide"><img src="./Image/YouTube-4.jpg" alt="YouTubePRサムネイル4"></div>
-          <div class="swiper-slide"><img src="./Image/YouTube-5.jpg" alt="YouTubePRサムネイル5"></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=4QCDKWwoZi0" target="_blank"
+              rel="noopener noreferre"><img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル1"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=TdGWnBjY0sI" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/YouTube-2.jpg" alt="YouTubePRサムネイル2"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=iR-zkGPbVH0&t=1s" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/YouTube-3.jpg" alt="YouTubePRサムネイル3"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=Qc_BR_UnHCM&t=1s" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/YouTube-4.jpg" alt="YouTubePRサムネイル4"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=8MXtpjEEd3w&t=11s" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/YouTube-5.jpg" alt="YouTubePRサムネイル5"></a></div>
         </div>
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
@@ -119,9 +124,12 @@
       <h3>VideoProduction</h3>
       <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./Image/Video-1.jpg" alt="Videoサムネイル1"></div>
-          <div class="swiper-slide"><img src="./Image/Video-2.jpg" alt="Videoサムネイル2"></div>
-          <div class="swiper-slide"><img src="./Image/Video-3.jpg" alt="Videoサムネイル3"></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=6Btsz2h-Mzk" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/Video-1.jpg" alt="Videoサムネイル1"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=CDLNO_6s3ZE" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/Video-2.jpg" alt="Videoサムネイル2"></a></div>
+          <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=Z3sOSpR4Qgg" target="_blank"
+              rel="noopener noreferrer"><img src="./Image/Video-3.jpg" alt="Videoサムネイル3"></a></div>
         </div>
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
